# Miner-SoftRender

./: CMakeLists.txt  README.md  main.cpp
core/: camera.cpp  camera.h  macro.h  maths.cpp  maths.h  model.cpp  model.h  pipeline.cpp  pipeline.h  sample.cpp  sample.h  scene.cpp  scene.h  spainlock.hpp  tgaimage.cpp  tgaimage.h
platform/: win32.cpp  win32.h
shader/: blinnphong_shader.cpp  pbr_shader.cpp  shader.h  skybox_shader.cpp
